# disk-cleanup-analyzer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: config.json
reports/test_cli_scan/: disk_report.csv  disk_report.html  folders.csv
src/: config_loader.py  duplicate_detector.py  exporter.py  filters.py  folder_analyzer.py  html_report.py  logger.py  scanner.py  utils.py
tests/: test_config_loader.py  test_duplicate_detector.py  test_exporter.py  test_filters.py  test_folder_analyzer.py  test_html_report.py  test_logger.py  test_scanner.py  test_utils.py
